navbar updated, not finished

--- a/index.html
+++ b/index.html
@@ -5,29 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Picture selling website">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="src/style.css">
     <title>Homepage ecommerce CSS projekt Adriano Valsangiacomo</title>
 </head>
 <body>
+    <header class="header">
+        <div class="top-border"></div>
     <nav class="navbar">
         <div class="logo-container">
-        <a href="#" class="logo-container__logo"><img src="#" alt="Company logo"></a>
+            <a href="#" class="logo-container__logo"><img src="#" alt="Company logo"></a>
+        </div>
+        <div class="search-container">
+            <form class="search-container__form">
+              <input type="text" placeholder="Search.." name="search" class="search__field">
+              <button type="submit" class="btn search__btn"><i class="fa fa-search"></i></button>
+            </form>
         </div>
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-          <li><a href="#work">Our Work</a></li>
+          <li><a href="#work">Shop</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#careers">My Account</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact"> <i class="fa fa-cart-plus larger" aria-hidden="true"></i></a></li>
         </ul>
     </nav>
-    <header>
-        
     </header>
-    <main>
-        
+    <main class="main-container">
+            <div class="main-container__intro">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="main-container__sustainable">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="main-container__ambassador">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
     </main>
     <footer>
 
