Added intro content

--- a/index.html
+++ b/index.html
@@ -27,16 +27,21 @@
         <ul class="menu">
           <li><a href="#work">Shop</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#careers">My Account</a></li>
-          <li><a href="#contact"> <i class="fa fa-cart-plus larger" aria-hidden="true"></i></a></li>
+          <li><a href="#account">My Account</a></li>
+          <li><a href="#contact"> <i class="fa fa-cart-plus" aria-hidden="true"></i></a></li>
         </ul>
     </nav>
     </header>
     <main class="main-container">
             <div class="main-container__intro">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="intro__description" >
+                    <p>Our own hand made fabrics and selected colors will last forever<br><br>
+                       Join us for the future
+                    </p>
+                </div>
+                <div class="intro__btn">
+                    <a href="#">Start here</a>
+                </div>
             </div>
             <div class="main-container__sustainable">
                 <div></div>
