--- a/index.html
+++ b/index.html
@@ -25,33 +25,37 @@
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-          <li><a href="#work">Shop</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#account">My Account</a></li>
-          <li><a href="#contact"> <i class="fa fa-cart-plus" aria-hidden="true"></i></a></li>
+          <li><a href="src/shop.html">Shop</a></li>
+          <li><a href="src/sustainability.html">Sustainability</a></li>
+          <li><a href="src/login.html">Login</a></li>
+          <li><a href="src/cart.html"> <i class="fa fa-cart-plus"></i></a></li>
         </ul>
     </nav>
     </header>
     <main class="main-container">
-            <div class="main-container__intro">
+            <div class="main-container__intro background__img">
                 <div class="intro__description" >
                     <p>Our own hand made fabrics and selected colors will last forever<br><br>
                        Join us for the future
                     </p>
                 </div>
-                <div class="intro__btn">
+                <div class="intro__link">
                     <a href="#">Start here</a>
                 </div>
             </div>
-            <div class="main-container__sustainable">
-                <div></div>
-                <div></div>
-                <div></div>
+            <div class="main-container__sustainable background__img">
+                <div class="sustainable__description">
+                    <p>
+                        Thanks to careful and meticulous selection, we can take advantage of excellence in quality with total respect for nature. <br>
+                    </p>
+                </div>
+                <div class="sustainable__link">
+                    <a href="#">Learn more</a>
+                </div>
             </div>
-            <div class="main-container__ambassador">
-                <div></div>
-                <div></div>
-                <div></div>
+            <div class="main-container__ambassador background__img">
+                <div class="ambassador__description"></div>
+                <div class="ambassador__link"></div>
             </div>
     </main>
     <footer>
