Added new collection in shop

--- a/src/shop.html
+++ b/src/shop.html
@@ -33,7 +33,116 @@
     </nav>
     </header>
     <main>
-        
+        <section class="discover">
+            <div class="discover__grid">
+                <div class="discover__items suit suit-one"></div>
+                <div class="discover__items suit suit-two"></div>
+                <div class="discover__items suit suit-three"></div>
+            </div>
+            <div class="discover__description">
+                <p>
+                   Our new collection <br> 
+                   <span class="discover__new-collection"><a href="#"> Discover the power of Blue </a></span> 
+                </p>
+            </div>
+        </section>
+        <section class="shop-container">
+            <div class="shop__filter">
+                
+            </div>
+            <div class="shop__items">
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+                <div class="shop__item">
+                    <div class="shop__main-image"></div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
