--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="card__content">
                         Intense 3 month course of CSS+HTML basics
                     </div>
-                    <button class="card__button">Register</button>
+                    <button class="card__button">Read more</button>
                 </div>
             </div>
 
@@ -67,7 +67,7 @@
                     <div class="card__content">
                         3 month course of PHP and SQL
                     </div>
-                    <button class="card__button">Register</button>
+                    <button class="card__button">Read more</button>
                 </div>
             </div>
 
@@ -80,11 +80,41 @@
                     <div class="card__content">
                         5 month course to build your own website
                     </div>
-                    <button class="card__button">Register</button>
+                    <button class="card__button">Read more</button>
                 </div>
             </div>
         </div>
     </section>
-    
+    <section class="front">
+        <h2 class="course-title course-description">Front-end</h2>
+        <p class="course-description">This is one of the best courses to learn Front-end web development as it covers some of the most useful programming languages ad technologies you will need as a front-end web developer like HTML, CSS, JavaScript, jQuery, and Bootstrap! </p>
+        <p class="course-description offset1-right">Created by theRomeo this course is also very hands-on, and you will start from creating a simple web page using HTML to write a chrome extension using JavaScript.</p>
+        <p class="course-description offset2-left">Talking about social proof, more than 119,530 students have already benefitted from this course, and it also has, on average, 4.3 ratings from close to 3,468 participants, which is phenomenal.</p>
+    </section>
+    <section class="back">
+        <h2 class="course-title course-description">Back-end</h2>
+        <p class="course-description">In this course, you'll explore the basic structure of a web application, and how a web browser interacts with a web server. You'll be introduced to the request/response cycle, including GET/POST/Redirect. </p>
+        <p class="course-description offset1-left">You'll also gain an introductory understanding of Hypertext Markup Language (HTML), as well as the basic syntax and data structures of the PHP language, variables, logic, iteration, arrays, error handling, and superglobal variables, among other elements.</p>
+        <p class="course-description offset2-right"> An introduction to Cascading Style Sheets (CSS) will allow you to style markup for webpages. Lastly, you'll gain the skills and knowledge to install and use an integrated PHP/MySQL environment like XAMPP or MAMP.</p>
+    </section>
+    <section class="fullstack">
+        <h2 class="course-title course-description">Full-stack</h2>
+        <p class="course-description">Develop with front-end development languages and tools such as HTML, CSS, JavaScript, React and Bootstrap </p>
+        <p class="course-description offset1-right">Deploy and scale applications using Cloud Native methodologies and tools like Containers, Kubernetes, Microservices and Serverless Functions</p>
+        <p class="course-description offset2-left"> Build your GitHub portfolio by applying your Full Stack Cloud Development skills with multiple labs and hands-on projects, including a capstone</p>
+    </section>
+    <section class="purchase">
+        <h2>If you are willing to enroll in any course, please fill the form and we will contact you the same day.</h2>
+        <form action="" class="purchase__form">
+            
+            <label for="name">Please enter your name:</label>
+            <input type="text" placeholder="Your name" name="name" id="name">
+            <label for="email">Please enter your email:</label>
+            <input type="email" placeholder="Your email" name="email" id="email">
+            <label for="phone">Please enter your phone:</label>
+            <input type="phone" placeholder="Your phone" name="phone" id="phone">
+            <button type="submit" class="btn purhase__btn">Submit</button>
+        </form>
+    </section>
 </body>
 </html>
