--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="nav-bar">
             <div class="nav-left">
                 <ul class="list-elements">
-                    <li class="list__item"><img src="/img/index-img/logo.png" alt="logo"></li>
+                    <li class="list__item"><img class="logo" src="/img/index-img/logo.png" alt="logo"></li>
                     <li class="list__item"><a class="nav-link" href="#">Furniture</a></li>
                     <li class="list__item"><a class="nav-link" href="#">Accessories</a></li>
                 </ul>
@@ -30,7 +30,7 @@
 
             <div class="nav-midle">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text">
+                <input class="serch" type="text">
             </div>
 
             <div class="nav-right">
