new foundational structure and shopping bag added

--- a/index.html
+++ b/index.html
@@ -10,33 +10,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 
 <body>
 
-    <!-- navbar begins  -->
-
-    <nav>
-        <div class="hamburger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-        <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
-            <li class="login"><a href="#">Login</a></li>
-            <li class="logout"><a href="#">Logout</a></li>
-        </ul>
-    </nav>
-    <!-- navbar ends  -->
+    <!-- navbar/ header begins  -->
+    <header>
+        <nav>
+            <div class="hamburger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li class="login"><a href="#">Login</a></li>
+                <li class="signup"><a href="#">Sign up</a></li>
+                <li><i class='bx bx-shopping-bag'></i></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- navbar / header ends  -->
 
 
     <!-- product /start page begins  -->
+    <main>main section</main>
 
 
 
     <!-- product /start page ends  -->
+
+    <!-- footer begins  -->
+    <footer>footer section</footer>
+
+
+
+    <!-- footer ends  -->
+
 
 
 </body>
