--- a/ecommerce.html
+++ b/ecommerce.html
@@ -40,8 +40,8 @@
     <header class="header">
         
         <h1>Cottonete</h1>       
-
-            <button class="header__cartbtn" aria-label="cart button"><i class="fa-solid fa-cart-shopping header__cart"></i></button>
+        
+            <a href="./cart.html" target="_blank"><button class="header__cartbtn" aria-label="cart button"><i class="fa-solid fa-cart-shopping header__cart"></i></button></a>
                 <div class="search">
                     <input type="text" class="header__searchbox" placeholder="search for your favorite sweater">
                     <button class="header__searchbtn" aria-label="search button">search</button>
