header & footer designed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
         
         <ul class="nav-bar1"> 
-            <h2 class="nav__header">Lets' Meat</h2>
+            <h1 class="nav__header">Lets' Meat</h1>
         </ul>
             <ul class="nav-bar2">
          <list class="nav__list">
@@ -72,11 +72,11 @@
 
     <!-- footer section starts here  -->
         <footer class="footer">
-            <div class="footer-content">
+            <!-- <div class="footer-content">
                 <h2>Privacy Policy</h2>
                 <h2>Terms & Conditions</h2>
             </div>
-            <br>
+            <br> -->
             <div class="footer__para">
                 <p>
                     <h4><i class="fas fa-map-marker"></i>Utrecht, Netherlands</h4>
@@ -90,13 +90,16 @@
             </div>
             <div class="footer__subscription">
                 
-                <h3>Subscribe For Newsletter</h3>
-                <input type="text" placeholder="Enter Your Email">
-                <button class="btn button__1">Subscribe</button>
+               <label for="subscribe">Subscribe For Newsletter:</label>
+               <input type="email" id="subscribe" name="subscribe" class="footer__sub" placeholder="Enter Your Email">
+               <button class="btn btn__sub">Subscribe</button>
             </div>
             <nav class="footer-nav">
-                <a href="#" class="footer__link"><i class="fab fa-facebook footer__icon"><br/></i>Lets' Meat</a>
+                <a href="#" class="footer__link">Follow Us :<br/><i class="fab fa-facebook footer__icon"><br/></i> Lets' Meat</a>
             </nav>
+            <div class="copy-right">
+                <p class="copyright">&copy; Copyright 2023 Lets'Meat.All Rishts Resarved</p>
+            </div>
 
         </footer>
 
