--- a/cart.html
+++ b/cart.html
@@ -41,7 +41,7 @@
     </header>
     <main class="main">
         <div id="main__img">
-            <img id="main__noitem" src="https://i.postimg.cc/c4P5WR2Q/54b13147340145-Y3-Jvc-Cw0-MDUs-Mz-E3-LDAs-NDI.png" alt="no items in your cart">
+            <img id="main__noitem" src="https://i.postimg.cc/QCbygCq0/empty-cart.png" alt="no items in your cart">
         </div>
     </main>
     <footer class="footer">
