style index page

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
         </div>
 
         <div class="banner-img">
-            <h2 class="banner-heading">Lorem, ipsum.</h2>
-            <p class="descrition">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, commodi!</p>
+            <div class="banner-description">
+                <h2 class="banner-heading">Lorem, ipsum.</h2>
+                <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, commodi!</p>
+            </div>
         </div>
     </header>
     <!-- header section ends here  -->
@@ -62,35 +64,23 @@
     <main>
         <div class="banner-noimg">
             <h2 class="banner-heading">Lorem, ipsum.</h2>
-            <p class="descrition">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, commodi!</p>
+            <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, commodi!</p>
         </div>
 
         <div class="goods-banners">
             <div class="goods-banner">
                 <img src="/img/index-img/furniture.jpg" alt="accessories img">
-                <h2 class="banner-heading">Lorem.</h2>
+                <h2 class="banner-heading group__dsc">Furniture</h2>
             </div>
             <div class="goods-banner">
                 <img src="/img/index-img/accessories.jpg" alt="accessories img">
-                <h2 class="banner-heading">Lorem.</h2>
+                <h2 class="banner-heading group__dsc">Accessories</h2>
             </div>
         </div>
 
         <section class="shop-items">
             <h3 class="section-heading">Furniture</h3>
             <div class="items-list">
-                <div class="card">
-                    <img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img">
-                    <h4 class="card__heading">Item1</h4>
-                    <p class="card__description">Lorem ipsum dolor sit amet.</p>
-                    <div class="card__price">
-                        <p class="price__regular">122$</p>
-                        <p class="price__reduced">1555$</p>
-                    </div>
-                    <p class="card__price"></p>
-                    <button class="card__button btn">Buy</button>
-                </div>
-
                 <div class="card">
                     <img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img">
                     <h4 class="card__heading">Item1</h4>
@@ -240,18 +230,6 @@
                     <p class="card__price"></p>
                     <button class="card__button btn">Buy</button>
                 </div>
-
-                <div class="card">
-                    <img src="/img/index-img/furniture.jpg" alt="furniture pic" class="card-img">
-                    <h4 class="card__heading">Item1</h4>
-                    <p class="card__description">Lorem ipsum dolor sit amet.</p>
-                    <div class="card__price">
-                        <p class="price__regular">122$</p>
-                        <p class="price__reduced">1555$</p>
-                    </div>
-                    <p class="card__price"></p>
-                    <button class="card__button btn">Buy</button>
-                </div>
                
             </div>
         </section>
@@ -272,8 +250,8 @@
 
     <!-- footer starts here  -->
     <footer id="main-footer">
-        <nav id="footer-nav">
-            <div class="nav-bar">
+        <!-- <nav id="footer-nav"> -->
+            <!-- <div class="nav-bar-footer"> -->
                 <div class="nav-left">
                     <ul class="list-elements">
                         <li class="list__item"><i class="fa-solid fa-house list__icon"></i></li>
@@ -293,9 +271,8 @@
                         <li class="list__item"><a class="nav-link" href="#"><i class="fa-brands fa-square-instagram list__item"></i></a></li>
                     </ul>
                 </div>
-            </div>
-        </nav>
-
+            <!-- </div> -->
+        <!-- </nav> -->
     </footer>
     <!-- footer ends here -->
 </body>
