Working on navbar dropdown menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="src/style.css">
     <title>Homepage ecommerce CSS projekt Adriano Valsangiacomo</title>
 </head>
-<body>
+<body class="index__body">
     <header class="header">
         <div class="top-border"></div>
     <nav class="navbar">
