--- a/src/login.html
+++ b/src/login.html
@@ -31,8 +31,8 @@
                 </form>
                 <div class="external__signing">
                     <a href="http://google.com" class="sign-in__external"><i class="fa fa-google" aria-hidden="true"></i> Sign in with Google</a>
-                    <a href="http://facebook.com" class="sign-in__external"><i class="fa fa-facebook" aria-hidden="true"></i> Sign in with Google</a>
-                    <a href="http://apple.com" class="sign-in__external"><i class="fa fa-apple" aria-hidden="true"></i> Sign in with Google</a>
+                    <a href="http://facebook.com" class="sign-in__external"><i class="fa fa-facebook" aria-hidden="true"></i> Sign in with Facebook</a>
+                    <a href="http://apple.com" class="sign-in__external"><i class="fa fa-apple" aria-hidden="true"></i> Sign in with Apple</a>
                 </div>
             </div>
             <div class="register">
