--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-links">
+                <li>
+                    <h1>Zapatoos</h1>
+                </li>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Products</a></li>
                 <li class="login"><a href="#">Login</a></li>
                 <li class="signup"><a href="#">Sign up</a></li>
-                <li><i class='bx bx-shopping-bag'></i></li>
+                <li><a href="#"><i class='bx bx-shopping-bag'></i></a></li>
             </ul>
         </nav>
     </header>
@@ -36,7 +39,31 @@
 
 
     <!-- product /start page begins  -->
-    <main>main section</main>
+    <main>
+        <div class="container">
+            <div class="product">
+                <img src="Images/Nike_Air.jpg" alt="Nike Air">
+                <h1 class="product__name">Nike Air Max</h1>
+                <h2 class="prodict__price">$500</h2>
+                <p class="product__discount">Flat 5% off</p>
+                <p class="product__discount-price">$1000</p>
+            </div>
+            <div class="product">
+                <img src="Images/Nike_Flyknit.jpg" alt="">
+                <h1 class="product__name">Nike Air Max</h1>
+                <h2 class="prodict__price">$500</h2>
+                <p class="product__discount">Flat 5% off</p>
+                <p class="product__discount-price">$1000</p>
+            </div>
+            <div class="product">
+                <img src="Images/Nike_Green.jpg" alt="">
+                <h1 class="product__name">Nike Air Max</h1>
+                <h2 class="prodict__price">$500</h2>
+                <p class="product__discount">Flat 5% off</p>
+                <p class="product__discount-price">$1000</p>
+            </div>
+        </div>
+    </main>
 
 
 
