--- a/iframe.html
+++ b/iframe.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>diamond earings</title>
+    <title>Document</title>
 </head>
 <body>
-    
+    <img width="100%" height="100%" src="/pictures/amy-shamblen-qdPnQuGeuwU-unsplash.jpg" alt="">
 </body>
 </html>
