fixed the marque

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <marquee behavior="" direction="">Free Shipping over $40</marquee>
+      <marquee behavior="" direction="">Up To 30% off Specisall V-Day Offer!! </marquee>
       <div class="header__links">
         <div class="header__logo logo">Lovely Minimal</div>
         <div class="header__btns">
@@ -59,11 +59,16 @@
      <h1 class="main__products-header">Products</h1>
 
      <section class="products">
-<a href="ring.html" target="main-frame" onclick=""><img class="product ring"width="300px" height="250px" src="/pictures/ring2.jpg" alt="diamond ring"></a>
-<a href="earings.html" target="main-frame"><img class="product earings" width="300px" height="250px" src="/pictures/earings.jpg" alt="diamond earings"></a>
-<a href="chain.html" target="main-frame"><img class="product chain" width="300px" height="250px" src="/pictures/chain.jpg" alt="gold chain"></a></class=>
-<a href="jwelerySet.html" target="main-frame"><img class="product jl-set" width="300px" height="250px" src="/pictures/set.jpg" alt="jewlery set"></a>
-     </div>
+<a href="ring.html" target="main-frame" onclick=""><img class="product ring"width="300px" height="250px" src="/pictures/ring2.jpg" alt="diamond ring">Diamond Ring</a>
+
+
+<a href="earings.html" target="main-frame"><img class="product earings" width="300px" height="250px" src="/pictures/earings.jpg" alt="diamond earings">Diamond Earings</a>
+
+<a href="chain.html" target="main-frame"><img class="product chain" width="300px" height="250px" src="/pictures/chain.jpg" alt="gold chain">18 Karat gold chain</a>
+
+<a href="jwelerySet.html" target="main-frame"><img class="product jl-set" width="300px" height="250px" src="/pictures/set.jpg" alt="jewlery set">
+  Minimalist gold set</a>
+     
      <!--<div class="aside__btns">
       <span><button class="chat__btn">Chat with us</button>
       </span>
