made the layout of the ring page

--- a/ring.html
+++ b/ring.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <main>
-        <h1>product page for ring</h1>
+        <div class="ring__img">
+            <img src="/pictures/ring2.jpg" alt="diamond ring">
+        </div>
+        <div class="ring">
+        <span class="ring__name">Diamond ring</span>
+        <span class="ring__price">$1449</span>
+
+        </div>
     </main>
 </body>
 </html>
